new header, delete images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Sebastian Guzman</title>
     <script>
-      let titleText =  "Sebastian Guzman | FrontEnd Developer 💻";
+      let titleText =  "Sebastian Guzman | Frontend Developer 💻";
       let position = 0;
 
       function scrollTitle() {
@@ -28,7 +28,7 @@
 
       scrollTitle();
   </script>
-    <link rel="icon" href="/public/FotoSinFondoDeMi.png" type="image/x-icon">
+    <link rel="icon" href="/public/sinfondolego.png" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
